; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_clear_dirstack.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_clear_dirstack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirstack = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dirstack*)* @clear_dirstack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_dirstack(%struct.dirstack* %0) #0 {
  %2 = alloca %struct.dirstack*, align 8
  %3 = alloca i64, align 8
  store %struct.dirstack* %0, %struct.dirstack** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %18, %1
  %5 = load i64, i64* %3, align 8
  %6 = load %struct.dirstack*, %struct.dirstack** %2, align 8
  %7 = getelementptr inbounds %struct.dirstack, %struct.dirstack* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ult i64 %5, %8
  br i1 %9, label %10, label %21

10:                                               ; preds = %4
  %11 = load %struct.dirstack*, %struct.dirstack** %2, align 8
  %12 = getelementptr inbounds %struct.dirstack, %struct.dirstack* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @heap_free(i32 %16)
  br label %18

18:                                               ; preds = %10
  %19 = load i64, i64* %3, align 8
  %20 = add i64 %19, 1
  store i64 %20, i64* %3, align 8
  br label %4

21:                                               ; preds = %4
  %22 = load %struct.dirstack*, %struct.dirstack** %2, align 8
  %23 = getelementptr inbounds %struct.dirstack, %struct.dirstack* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  ret void
}

declare dso_local i32 @heap_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
